Revision history for Perl extension Module::Build.

0.36_08 - 

 Enhancements:

 - Give a list of valid licenses when given one we don't recognize
   (RT#55951) [Yanick Champoux]

0.3607 - Thu Apr  1 11:27:16 EDT 2010

 Bug fixes:

 - The 'dist' action now always ensures a clean dist directory before
   creating the tarball [David Golden]

0.36_06 - Thu Apr  1 01:23:58 EDT 2010

 Other:

 - Migrated repository to git and updated META.yml to match

 - Removed bugtracker URL (let search.cpan.org use default)

 - Disabled SIGNATURE generation

0.3605 - Wed Mar 31 12:05:11 EDT 2010

 - No changes from 0.36_04

0.36_04 - Tue Mar 16 21:41:41 EDT 2010

 Bug fixes:

 - Added missing newline to "Changing sharpbang" messages under verbose
   output (RT#54474) [David Golden]

 - Added 'beos' to list of Unix-like os types (RT#53876) [Nigel Horne]

 - Sets $ENV{HOME} to a temporary directory during testing [David Golden]

 - For VMS: fixed prefix handling plus other test fixes [Craig Berry]

 - Support anonymous array of directories for c_source [Alberto Simões]

 - Small POD formatting fix [James Keenan]

0.3603 - Mon Jan 18 22:28:59 EST 2010

(Oops, I released the last one before I realized this should have been
fixed along with it.)

 Bug fixes:

 - Module::Build::Compat would croak on distibutions that set requires
   'perl' to a dotted decimal like '5.6.2'.  We now skip that key
   since it doesn't go into PREREQ_PM and we numify it properly for
   'use 5.006002' in the generated Makefile.PL (RT#53409)
   [David Golden, adapted from patch by G. Allen Morris III]

0.3602 - Mon Jan 18 22:09:54 EST 2010

 Bug fixes:

 - Fix failures in t/properties/needs_compiler.t when $ENV{CC} is set
   (RT#53296) [David Golden, adapted from patch by Jens Rehsack]

0.3601 - Mon Dec 21 14:39:33 EST 2009

 Bug fixes:

 - When the currently running Module::Build is not the same as the one
   that created the Build file, there is now a warning rather than a fatal